--- a/contents.html
+++ b/contents.html
@@ -222,7 +222,6 @@
                             <img src="img/close.png" alt="icon-close">
                         </a>
                         <h3 class="etiquetaLarga">Características de la defunción</h3>
-<<<<<<< HEAD
                         <div class="modal2-1-1-menu">
                             <div>
                                 <button data-target="modal2-1-1-1" class="item modal-trigger modal-close"
@@ -236,6 +235,20 @@
                                     onclick="btnModal2_1_1_2()">
                                     <img id="imgModal2-1-1-2" src="img/btn1-modal2-1-2.png" alt="" class="animated">
                                     <span>Sitio de ocurrencia</span>
+                                </button>
+                            </div>
+                            <div>
+                                <button data-target="modal2-1-1-3" class="item modal-trigger modal-close"
+                                    onclick="btnModal2_1_1_3()">
+                                    <img id="imgModal2-1-1-3" src="img/btn1-modal2-1-3.png" alt="" class="animated">
+                                    <span>Probable manera de muerte</span>
+                                </button>
+                            </div>
+                            <div>
+                                <button data-target="modal2-1-1-4" class="item modal-trigger modal-close"
+                                    onclick="btnModal2_1_1_4()">
+                                    <img id="imgModal2-1-1-4" src="img/btn1-modal2-1-4.png" alt="" class="animated">
+                                    <span>Muertes de acuerdo con la edad del fallecido</span>
                                 </button>
                             </div>
                         </div>
@@ -280,33 +293,54 @@
                             <p>
                                 Hace referencia a las muertes ocurridas extra institucionalmente. En el caso de las defunciones es  relevante consignar en el certificado, el lugar donde ocurre el fallecimiento, pues esta información permite realizar una adecuada clasificación de la defunción.
                             </p>
-=======
-                        <div class="slider">
-                            <img id="prev" src="img/prev.png" alt="previows" class="modal-prev hide" onclick="prev()">
-                            <ul class="slides">
-                                <li>
-                                    <img src="./img/slide_1.png"> 
-                                    <div class="txtMdl2-2-1">
-                                        <p>la expulsión o extracción completa de un producto de la concepción del cuerpo
-                                            de la madre, independientemente de la duración del embarazo, que, después de
-                                            dicha separación, respire o dé cualquier otra señal de vida, como latidos
-                                            del corazón, pulsaciones del cordón umbilical o movimiento apreciable de los
-                                            músculos voluntarios, tanto si se ha cortado o no el cordón umbilical o la
-                                            placenta permanezca o no unida. Cada producto de un nacimiento que reúna
-                                            esas condiciones se considera como un nacido vivo”. <br> (Organización
-                                            Mundial de la Salud, 2015)</p>
-                                    </div>
-                                </li>
-                                <li>
-                                    <img src="./img/slide_2.png"> 
-                                    <div class="txtMdl2-2-2">
-                                        <p>El certificado de nacido vivo tiene 40 variables y está constituido por tres
-                                            capítulos: </p>
-                                    </div>
-                                </li>
-                            </ul>
-                            <img id="next" src="img/next.png" alt="next" class="modal-next" onclick="next()">
->>>>>>> 582ee059cff37691eba1cd28cde627ae74441c45
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal 2-1-1-3 Structure -->
+                <div id="modal2-1-1-3" class="modal mdl-2-1-1-3">
+                    <div class="modal-content">
+                        <a href="#modal2-1-1" class="modal-trigger modal-close ico-close">
+                            <img src="img/close.png" alt="icon-close">
+                        </a>
+                        <h3 class="etiquetaLarga">Probable manera de muerte</h3>
+                        <div class="modal2-1-1-3_P0">
+                            <p>
+                                <strong>Natural:</strong> Corresponden a aquellas situaciones biológicas o estados morbosos que conducen a la muerte, y no por causas incidentales o accidentales.
+                            </p>
+                            <img src="img/img1-modal-2-1-1-3.png" alt="">
+                        </div>
+                        <div class="modal2-1-1-3_P1">
+                            <p>
+                                <strong>Estudio:</strong> Son las circunstancias que requieren investigaciones judiciales para poder determinar si se trata de una muerte natural o violenta. (Este tipo de muerte solo es certificada por parte del Instituto Nacional de Medicina Legal y Ciencias Forenses).
+                            </p>
+                            <img src="img/img2-modal-2-1-1-3.png" alt="">
+                        </div>
+                        <div class="modal2-1-1-3_P2">
+                            <p>
+                                <strong>Violenta:</strong> Son esas circunstancias externas que incidentalmente o accidentalmente producen la muerte; por ejemplo, accidentes de transporte, caídas accidentales, lesiones autoinfligidas, , ahogamientos, homicidios entre otras.
+                            </p>
+                            <img src="img/img3-modal-2-1-1-3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal 2-1-1-4 Structure -->
+                <div id="modal2-1-1-4" class="modal mdl-2-1-1-4">
+                    <div class="modal-content">
+                        <a href="#modal2-1-1" class="modal-trigger modal-close ico-close">
+                            <img src="img/close.png" alt="icon-close">
+                        </a>
+                        <h3 class="etiquetaXL">Muertes de acuerdo con la edad del fallecido</h3>
+                        <div class="modal2-1-1-4_P0">
+                            <p>
+                                Mortalidad Fetal
+                            </p>
+                            <div id="text_01">
+                                <p>
+                                    <strong>Mortalidad Fetal:</strong> Muerte de un producto de la concepción, antes de su expulsión o extracción completa del cuerpo de su madre, independiente de la duración del embarazo.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
