ajustes de slioder y tamaño del modal

--- a/contents.html
+++ b/contents.html
@@ -416,7 +416,7 @@
                         </a>
                         <h3 class="etiqueta">Procedimentales</h3>
                         <div id="slides-modal3-1" class="slider">
-                            <img id="modal3-1-prev" src="img/prev.png" alt="previows" class="modal3-1-prev" onclick="modal3_1_prev()">
+                            <img id="modal3-1-prev" src="img/prev.png" alt="previows" class="modal3-1-prev hide infinite shake delay-1s slow animated " onclick="modal3_1_prev()">
                             <ul class="slides">
                                 <li>
                                     <div class="slide3-1-1">
@@ -495,7 +495,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <img id="modal3-1-next" src="img/next.png" alt="next" class="modal3-1-next" onclick="modal3_1_next()">
+                            <img id="modal3-1-next" src="img/next.png" alt="next" class="modal3-1-next infinite shake delay-1s slow animated" onclick="modal3_1_next()">
                         </div>
                     </div>
                 </div>
