Desarrollo últimos ajustes interactivo: Oscar

--- a/contents.html
+++ b/contents.html
@@ -251,6 +251,20 @@
                                     <span>Muertes de acuerdo con la edad del fallecido</span>
                                 </button>
                             </div>
+                            <div>
+                                <button data-target="modal2-1-1-5" class="item modal-trigger modal-close"
+                                    onclick="btnModal2_1_1_5()">
+                                    <img id="imgModal2-1-1-5" src="img/btn1-modal2-1-5.png" alt="" class="animated">
+                                    <span>Muerte en mujeres en edad fértil</span>
+                                </button>
+                            </div>
+                            <div>
+                                <button data-target="modal2-1-1-6" class="item modal-trigger modal-close"
+                                    onclick="btnModal2_1_1_6()">
+                                    <img id="imgModal2-1-1-6" src="img/btn1-modal2-1-6.png" alt="" class="animated">
+                                    <span>Tipo de certificador</span>
+                                </button>
+                            </div>                      
                         </div>
                     </div>
                 </div>
@@ -336,11 +350,142 @@
                             <p>
                                 Mortalidad Fetal
                             </p>
-                            <div id="text_01">
-                                <p>
-                                    <strong>Mortalidad Fetal:</strong> Muerte de un producto de la concepción, antes de su expulsión o extracción completa del cuerpo de su madre, independiente de la duración del embarazo.
-                                </p>
-                            </div>
+                        </div>
+                        <div class="modal2-1-1-4_P1">
+                            <p>
+                                Abortos
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P2">
+                            <p>
+                                Mortinatos
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P3">
+                            <p>
+                                Mortalidad Perinatal
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P4">
+                            <p>
+                                Mortalidad Neonatal
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P5">
+                            <p>
+                                Neonatal Precoz
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P6">
+                            <p>
+                                Neonatal Tardía
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-4_P7">
+                            <p>
+                                Mortalidad Infantil
+                            </p>
+                        </div>
+                        <div class="textos_mdl2-1-1-4">
+                            <p id="modal2-1-1-4_P0">
+                                <strong>Mortalidad Fetal:</strong> Muerte de un producto de la concepción, antes de su expulsión o extracción completa del cuerpo de su madre, independiente de la duración del embarazo.
+                            </p>
+                            <p id="modal2-1-1-4_P1">
+                                <strong>Aborto:</strong> Se define como la terminación del embarazo, con la expulsión o extracción de un embrión o feto muerto, es decir, que no respira ni da otra señal de vida antes de las 22 semanas de gestación y que pese menos de 500 gramos (DANE, 2013).
+                            </p>
+                            <p id="modal2-1-1-4_P2">
+                                <strong>Mortinatos:</strong> Incluye las muertes fetales de los productos del embarazo de 500 gramos y de más de 22 semanas de gestación hasta el nacimiento (DANE, 2013).
+                            </p>
+                            <p id="modal2-1-1-4_P3">
+                                <strong>Mortalidad Perinatales:</strong> Muertes que ocurren en el periodo perinatal que va desde las 22 semanas completas de gestación o 500 gramos y más, y termina a los siete (7) días completos después del parto. - (DANE, 2013).
+                            </p>
+                            <p id="modal2-1-1-4_P4">
+                                <strong>Neonatales:</strong> Muertes que ocurren en el período neonatal que inicia con el nacimiento y termina a los 28 días completos después del nacimiento (DANE, 2013).
+                            </p>
+                            <p id="modal2-1-1-4_P5">
+                                <strong>Neonatal Precoz:</strong> Muertes que ocurren en los nacidos vivos en el periodo durante los siete días completos de vida. (Organización Mundial de la Salud, 2015).
+                            </p>
+                            <p id="modal2-1-1-4_P6">
+                                <strong>Neonatal Tardía:</strong> Muertes que ocurre en los nacidos vivos después del séptimo día hasta los 28 días completos de vida. (Organización Mundial de la Salud, 2015).
+                            </p>
+                            <p id="modal2-1-1-4_P7">
+                                <strong>Muerte Infantil:</strong> Defunciones de niños menores de un año de edad (menores de 11 meses, 29 días, 23 horas, 59 minutos) ocurridas en el territorio nacional.) (DANE, 2013). 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal 2-1-1-5 Structure -->
+                <div id="modal2-1-1-5" class="modal mdl-2-1-1-5">
+                    <div class="modal-content">
+                        <a href="#modal2-1-1" class="modal-trigger modal-close ico-close">
+                            <img src="img/close.png" alt="icon-close">
+                        </a>
+                        <h3 class="etiquetaLarga">Mortalidad materna</h3>
+                        <div class="modal2-1-1-5_P0">
+                            <p>
+                                Mortalidad Materna
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-5_P1">
+                            <p>
+                                Defunción Materna Tardía
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-5_P2">
+                            <p>
+                                Muerte por secuela obstétrica
+                            </p>
+                        </div>
+                        <div class="textos_mdl2-1-1-5">
+                            <p id="modal2-1-1-5_P0">
+                                <strong>Materna:</strong> Es la muerte de una mujer mientras está embarazada o dentro de los 42 días siguientes a la terminación del embarazo, independientemente de la duración y el sitio anatómico del embarazo, debida a cualquier causa relacionada con o agravada por el embarazo mismo o su atención, pero no por causas accidentales o incidentales (Organización Mundial de la Salud, 2015).
+                            </p>
+                            <p id="modal2-1-1-5_P1">
+                                <strong>Defunción materna tardía:</strong> Una defunción materna tardía es la muerte de una mujer por causas obstétricas directas o indirectas después de los 42 días pero antes de un año de la terminación del embarazo (Organización Mundial de la Salud, 2015).
+                            </p>
+                            <p id="modal2-1-1-5_P2">
+                                <strong>Defunción por secuela obstétrica:</strong> Es la muerte de una mujer por los efectos residuales de causas obstétricas directas o indirectas que ocurre un año o más después de la terminación del embarazo. (Organización Mundial de la Salud, 2017).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Modal 2-1-1-6 Structure -->
+                 <div id="modal2-1-1-6" class="modal mdl-2-1-1-6">
+                    <div class="modal-content">
+                        <a href="#modal2-1-1" class="modal-trigger modal-close ico-close">
+                            <img src="img/close.png" alt="icon-close">
+                        </a>
+                        <h3 class="etiquetaXL">Médico certificador según la atención de la defunción</h3>
+                        <div class="modal2-1-1-6_P0">
+                            <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="pulse animated">
+                            <p>
+                                Médico Tratante
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-6_P1">
+                            <img id="imgModal2-1-1-6-2" src="img/img2-modal-2-1-1-6.png" alt="" class="pulse animated">
+                            <p>
+                                Médico No Tratante
+                            </p>
+                        </div>
+                        <div class="modal2-1-1-6_P2">
+                            <img id="imgModal2-1-1-6-3" src="img/img3-modal-2-1-1-6.png" alt="" class="pulse animated">
+                            <p>
+                                Médico Legista
+                            </p>
+                        </div>
+                        <div class="textos_mdl2-1-1-6">
+                            <p id="modal2-1-1-6_P0">
+                                <strong>Médico Tratante:</strong> Médico que atendió al paciente en vida, como médico familiar, o aquel que asistió al paciente antes de morir. Se supone que durante este breve lapso, el médico pudo haber realizado un examen físico o haber iniciado algún tratamiento. (DANE, 2013)
+                            </p>
+                            <p id="modal2-1-1-6_P1">
+                                <strong>Médico No Tratante:</strong> Médico que no conoció al paciente en vida, pero por responsabilidad institucional y social accede al conocimiento indirecto; debe apoyarse en los datos de historia clínica o en la información de exámenes complementarios o interrogatorio a familiares o testigos (DANE, 2013).
+                            </p>
+                            <p id="modal2-1-1-6_P2">
+                                <strong>Médico Legista:</strong> Profesional que a través de una necropsia médico legal establece las causas de defunción. Este mecanismo es usado particularmente para los fallecimientos donde existe duda de que se trate de una muerte natural o externa, o muertes judicializadas.
+                            </p>
                         </div>
                     </div>
                 </div>
