Desarrollo completo btn 2

--- a/contents.html
+++ b/contents.html
@@ -478,7 +478,7 @@
                         </a>
                         <h3 class="etiquetaXL">Médico certificador según la atención de la defunción</h3>
                         <div class="modal2-1-1-6_P0">
-                            <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="pulse animated">
+                            <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="animated">
                             <p>
                                 Médico Tratante
                             </p>
@@ -490,7 +490,7 @@
                             </p>
                         </div>
                         <div class="modal2-1-1-6_P2">
-                            <img id="imgModal2-1-1-6-3" src="img/img3-modal-2-1-1-6.png" alt="" class="pulse animated">
+                            <img id="imgModal2-1-1-6-3" src="img/img3-modal-2-1-1-6.png" alt="" class="animated">
                             <p>
                                 Médico Legista
                             </p>
