botones 2 y 3 del modal 2, ajuste en pantalla final

--- a/final.html
+++ b/final.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,14 +11,15 @@
     <link rel="stylesheet" href="css/master.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
 </head>
+
 <body>
     <div class="containers">
         <header>
             <div class="titles">
                 <h3>CURSO: ESTADÍSTICAS VITALES</h3>
                 <hr>
-                <h5>Módulo 2</h5>
-                <h1>Introducción Certificado Nacido Vivo</h1>
+                <h5>Módulo 3</h5>
+                <h1>Módulo Certificación Médica de Defunciones</h1>
             </div>
             <a href="index.html" class="icon-home"><i class="material-icons">home</i></a>
         </header>
@@ -29,11 +31,14 @@
                     <div class="title">
                         <h3>Despedida</h3>
                     </div>
-                    <p> Esperamos haber contribuido al proceso de aprendizaje en la introducción al certificado de nacido vivo. </p>   
-                    <p>Para profundizar más en este proceso, explore el documento PDF dispuesto en el aula, con el objetivo de indagar sobre otras recomendaciones para el proceso de certificación de nacido vivo. </p> 
+                    <p> Esperamos haber contribuido al proceso de aprendizaje en la introducción al certificado de
+                        nacido vivo. </p>
+                    <p>Para profundizar más en este proceso, explore el documento PDF dispuesto en el aula, con el
+                        objetivo de indagar sobre otras recomendaciones para el proceso de certificación de nacido vivo.
+                    </p>
                 </div>
                 <a href="#!" target="_blank" rel="noopener noreferrer" class="btn-audio pulse animated">
-                    <img src="img/ico-audio.png" alt="Audio"> AUDIO
+                    <img src="img/icon-audio.png" alt="Audio"> AUDIO
                 </a>
             </div>
         </main>
@@ -42,4 +47,5 @@
         </footer>
     </div>
 </body>
+
 </html>
