Versión para presentar y recibir retroalimentación

--- a/contents-2-1-1.html
+++ b/contents-2-1-1.html
@@ -308,19 +308,19 @@
                         <img src="img/close.png" alt="icon-close">
                     </a>
                     <h3 class="etiquetaXL">Médico certificador según la atención de la defunción</h3>
-                    <div class="modal2-1-1-6_P0">
+                    <div class="modal2-1-1-6_P0" onclick="btnModal2_1_1_6_1()">
                         <img id="imgModal2-1-1-6-1" src="img/img1-modal-2-1-1-6.png" alt="" class="animated">
                         <p>
                             Médico Tratante
                         </p>
                     </div>
-                    <div class="modal2-1-1-6_P1">
+                    <div class="modal2-1-1-6_P1" onclick="btnModal2_1_1_6_2()">
                         <img id="imgModal2-1-1-6-2" src="img/img2-modal-2-1-1-6.png" alt="" class="pulse animated">
                         <p>
                             Médico No Tratante
                         </p>
                     </div>
-                    <div class="modal2-1-1-6_P2">
+                    <div class="modal2-1-1-6_P2" onclick="btnModal2_1_1_6_3()">
                         <img id="imgModal2-1-1-6-3" src="img/img3-modal-2-1-1-6.png" alt="" class="animated">
                         <p>
                             Médico Legista
