--- a/contents.html
+++ b/contents.html
@@ -515,33 +515,33 @@
                         <h3 class="etiquetaLarga">Diligenciamiento de las variables </h3>
                         <div id="tabs-modal3-2" class="menuTabs2">
                             <ul class="tabs">
-                                <li class="tab">
+                                <li class="tab" onclick="changeIcon('#liModal3-1')">
                                     <a class="active" href="#tabModal3-1">
-                                        <img src="img/tab-inactive.png" alt="">
+                                        <img id="#liModal3-1" src="img/tab-active.png" alt="">
                                         <p>
                                             Recomendaciones <br> para certificación <br> de muertes fetales
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab">
+                                <li class="tab" onclick="changeIcon('#liModal3-2')">
                                     <a href="#tabModal3-2">
-                                        <img src="img/tab-inactive.png" alt="">
+                                        <img id="#liModal3-2" src="img/tab-inactive.png" alt="">
                                         <p>
                                             Recomendaciones <br> para certificación <br> de muertes no fetales
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab">
+                                <li class="tab" onclick="changeIcon('#liModal3-3')">
                                     <a href="#tabModal3-3">
-                                        <img src="img/tab-inactive.png" alt="">
+                                        <img id="#liModal3-3" src="img/tab-inactive.png" alt="">
                                         <p>
                                             Recomendaciones <br> para muertes en <br>mujeres en edad fértil
                                         </p>
                                     </a>
                                 </li>
-                                <li class="tab">
+                                <li class="tab" onclick="changeIcon('#liModal3-4')">
                                     <a href="#tabModal3-4">
-                                        <img src="img/tab-inactive.png" alt="">
+                                        <img id="#liModal3-4" src="img/tab-inactive.png" alt="">
                                         <p>
                                             Recomendaciones <br> para muertes de <br> causa violenta
                                         </p>
