Ultima versión con responsive

--- a/contents-2-1-1.html
+++ b/contents-2-1-1.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="containers">
-        <header>
+        <header id="content">
             <div class="titles">
                 <h3>CURSO: ESTADÍSTICAS VITALES</h3>
                 <hr>
@@ -29,6 +29,7 @@
             <hr>
             <!-- Modal 2-1-1 Structure -->
             <div id="modal2-1-1" class="mdl-2-1-1">
+                <div id="bgPage"></div>
                 <div class="modal-content">
                     <a href="contents.html" data-target="#modal2-1" class="modal-trigger modal-close ico-close" id="volver" onclick="abrirModal()">
                         <img src="img/close.png" alt="icon-close">
